# linux-perf-event-reader

./: Cargo.toml  README.md
src/: common_data.rs  constants.rs  consts.rs  endian.rs  event_record.rs  lib.rs  parse_info.rs  perf_event.rs  raw_data.rs  sample.rs  types.rs  utils.rs
src/records/: common_data.rs  event_record.rs  mod.rs  parse_info.rs  registers.rs  sample.rs  thread_map.rs
