[package]
name = "linux-perf-event-reader"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
categories = ["development-tools::profiling", "parser-implementations"]
description = "Parse Linux perf_event information from raw bytes"
keywords = ["linux", "perf", "parser"]
readme = "Readme.md"
documentation = "https://docs.rs/linux-perf-event-reader/"
repository = "https://github.com/mstange/linux-perf-event-reader/"
exclude = ["/.github", "/.vscode", "/tests"]

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
memchr = "2.4.1"
thiserror = "1.0.30"
